--- a/public/index.html
+++ b/public/index.html
@@ -9,10 +9,13 @@
   <link rel="manifest" href="manifest.json">
   <link rel="icon" href="favicon.png" />
   <meta name="theme-color" content="#ffffff">
+
+  <link rel="apple-touch-icon" href="logo192.png" />
   
   <title>FeverApp</title>
 </head>
 <body>
+  <!-- <noscript>You need to enable JavaScript to run this app.</noscript> -->
   <div id="root"></div>
 </body>
 </html>
